Stretch: Add fixed nav bar

--- a/css/index.css
+++ b/css/index.css
@@ -136,6 +136,13 @@ html,
 body {
   font-family: 'Ubuntu', sans-serif;
   color: #5E6164;
+  margin-top: 52px;
+}
+@media (max-width: 500px) {
+  html,
+  body {
+    margin-top: 47px;
+  }
 }
 h1,
 h2,
@@ -168,7 +175,12 @@ a {
   margin: 0 auto;
 }
 nav {
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
   background-color: #F6F6F6;
+  opacity: 0.93;
   border-bottom: 1px solid #F1F1F1;
   display: flex;
   flex-direction: column;
