--- a/less/global.less
+++ b/less/global.less
@@ -10,6 +10,11 @@ html {
 html, body {
   font-family: 'Ubuntu', sans-serif;
   color: @main-font-color;
+  margin-top: 52px;
+
+  @media @phone {
+    margin-top: 47px;
+  }
 }
 
 h1, h2, h3, h4, h5 {
