--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,12 @@
 // Navigation code here
 
 nav {
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
   background-color: @nav-bg;
+  opacity: 0.93;
   border-bottom: 1px solid @nav-border;
   .flex(column);
   align-items: center;
